crates/vize_atelier_vapor/src/l3/tests/snapshots/vize_atelier_vapor__l3__tests__once_events__once_event_payload.snap
---
source: crates/vize_atelier_vapor/src/s3/tests/once_events.rs
expression: code
---
import { createInvoker as _createInvoker, delegateEvents as _delegateEvents, template as _template } from 'vue';
const t0 = _template("<button>frozen</button>", true)
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  n0.$evtclick = _createInvoker(e => _ctx.record(e))
  return n0
}
